<resources>
    <string name="app_name">Battleship</string>
    <string name="LoginTitle">Sign-in</string>
    <string name="LabelLogin">Login</string>
    <string name="labelPassword">Password</string>
    <string name="SignUpTitle">Sign-Up</string>
    <string name="labelEmail">E-mail</string>
    <string name="labelConfirmPassword">Confirm Password</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonOkay">Okay</string>
    <string name="buttonSignIn">Sign-in</string>
    <string name="buttonSignUp">Sign-up</string>
    <string name="labelCommand">Command:</string>
    <string name="btnFire">Fire</string>
    <string name="ButtonNew">New Game</string>
    <string name="ButtonLeaders">Leaders</string>
    <string name="labelLeaderBoardTitle">Leader Board</string>
    <string name="labelAmmoLeft">Ammo Left:</string>
</resources>
